Ensure search hover is aligned with the rest of the theme

--- a/src/pydata_sphinx_theme/assets/styles/components/_search.scss
+++ b/src/pydata_sphinx_theme/assets/styles/components/_search.scss
@@ -144,7 +144,7 @@
   &:hover,
   &:focus {
     background-color: var(--pst-color-surface);
-    border-color: var(--pst-color-primary);
+    border: 2px solid var(--pst-color-link-hover);
   }
 
   // The keyboard shotcut text
